--- a/app/views/manifestations/_new_attachment.html.erb
+++ b/app/views/manifestations/_new_attachment.html.erb
@@ -34,6 +34,6 @@
 
 <div id="submenu" class="ui-corner-all">
   <ul>
-    <li><%= link_to t('page.back'), resources_path -%></li>
+    <li><%= link_to t('page.back'), manifestations_path -%></li>
   </ul>
 </div>
