--- a/app/views/manifestations/_attachment_file.html.erb
+++ b/app/views/manifestations/_attachment_file.html.erb
@@ -1,6 +1,6 @@
-<%- if can? :show, @resource -%>
+<%- if can? :show, @manifestation -%>
   <tr>
     <td><%= t('manifestation.attachment_file') -%>:</td>
-    <td><%= link_to h(@resource.attachment_file_name), @resource.attachment.url -%></td>
+    <td><%= link_to h(@manifestation.attachment_file_name), @manifestation.attachment.url -%></td>
   </tr>
 <%- end -%>
