--- a/app/views/manifestations/_history_list.html.erb
+++ b/app/views/manifestations/_history_list.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <%- manifestation.versions.reverse.each_with_index do |version, i| -%>
       <li>
-        <%= link_to l(version.created_at), resource_path(manifestation, :version_id => version.id) -%>
+        <%= link_to l(version.created_at), manifestation_path(manifestation, :version_id => version.id) -%>
         <%- if i == 0 -%>
           (<%= t('page.current_version') -%>)
         <%- end -%>
