--- a/app/views/manifestations/edit.html.erb
+++ b/app/views/manifestations/edit.html.erb
@@ -2,20 +2,20 @@
   <h1 class="title"><%= t('page.editing', :model => t('activerecord.models.manifestation')) -%></h1>
 <div id="content_list">
 
-<%= form_for(@resource) do |f| -%>
+<%= form_for(@manifestation) do |f| -%>
   <%= f.error_messages -%>
 
-  <%- if @resource.series_statement -%>
+  <%- if @manifestation.series_statement -%>
     <p>
       <%= f.label t('activerecord.models.series_statement') -%>
-      <%= link_to h(@resource.series_statement.original_title), @resource.series_statement -%>
-      (<%= link_to t('series_statement.edit'), series_statements_path(:manifestation_id => @resource.id) -%>)
+      <%= link_to h(@manifestation.series_statement.original_title), @manifestation.series_statement -%>
+      (<%= link_to t('series_statement.edit'), series_statements_path(:manifestation_id => @manifestation.id) -%>)
       <%= f.hidden_field :series_statement_id -%>
     </p>
   <%- else -%>
     <p>
       <%= f.label t('activerecord.models.series_statement') -%>
-      (<%= link_to t('series_statement.edit'), series_statements_path(:manifestation_id => @resource.id) -%>)
+      (<%= link_to t('series_statement.edit'), series_statements_path(:manifestation_id => @manifestation.id) -%>)
     </p>
 
   <%- end -%>
@@ -46,7 +46,7 @@
   </p>
   <p>
     <%= f.label t('activerecord.attributes.manifestation.date_of_publication') -%>
-    <%= f.text_field :date_of_publication, :value => @resource.date_of_publication.try(:strftime, "%Y-%m-%d"), :class => 'date_field' -%>
+    <%= f.text_field :date_of_publication, :value => @manifestation.date_of_publication.try(:strftime, "%Y-%m-%d"), :class => 'date_field' -%>
   </p>
 
   <!--<p>
@@ -55,8 +55,8 @@
     </p>
   -->
 
-  <%- if @resource.series_statement -%>
-    <%= render :partial => 'manifestations/serial_form', :locals => {:f => f, :manifestation => @resource} -%>
+  <%- if @manifestation.series_statement -%>
+    <%= render :partial => 'manifestations/serial_form', :locals => {:f => f, :manifestation => @manifestation} -%>
   <%- else -%>
     <p>
       <%= f.label t('activerecord.attributes.manifestation.edition') -%>
@@ -134,14 +134,14 @@
 </div>
 
 <div id="submenu" class="ui-corner-all">
-  <%= render :partial => 'manifestations/book_jacket', :locals => {:manifestation => @resource} -%>
+  <%= render :partial => 'manifestations/book_jacket', :locals => {:manifestation => @manifestation} -%>
   <ul>
-    <li><%= link_to t('page.show'), @resource -%></li>
-    <li><%= link_to t('page.destroy'), @resource, :confirm => t('page.are_you_sure'), :method => :delete -%></li>
+    <li><%= link_to t('page.show'), @manifestation -%></li>
+    <li><%= link_to t('page.destroy'), @manifestation, :confirm => t('page.are_you_sure'), :method => :delete -%></li>
     <%- case when @patron -%>
       <li><%= link_to t('page.back'), patron_manifestations_path(@patron) -%></li>
     <%- else -%>
-      <li><%= link_to t('page.back'), resources_path -%></li>
+      <li><%= link_to t('page.back'), manifestations_path -%></li>
     <%- end -%>
   </ul>
 </div>
