--- a/app/views/manifestations/index.html.erb
+++ b/app/views/manifestations/index.html.erb
@@ -1,17 +1,17 @@
 <div id="content_detail" class="ui-corner-all">
 <h1 class="title"><%= t('page.search_resource', :model => t('page.resource')) -%></h1>
 <div id="content_list">
-  <%= render :partial => 'manifestations/title', :locals => {:manifestation => @resource} if @resource -%>
+  <%= render :partial => 'manifestations/title', :locals => {:manifestation => @manifestation} if @manifestation -%>
 
-  <%= form_for :resources, :url => resources_path, :html => {:method => 'get'} do -%>
+  <%= form_for :manifestations, :html => {:method => 'get'} do -%>
     <p>
       <%= t('page.search_term') -%>:
       <%= search_field_tag 'query', h(@query), {:id => 'search_form_top', :class => 'search_form'} -%>
       <%= hidden_field_tag 'reservable', h(@reservable) if @reservable -%>
-      <%= hidden_field_tag 'resource_id', @resource.id if @resource -%>
+      <%= hidden_field_tag 'manifestation_id', @manifestation.id if @manifestation -%>
       <%= submit_tag t('page.search') -%>
-      <% if @resource %>
-        <%- if can? :destroy, @resource -%>
+      <% if @manifestation %>
+        <%- if can? :destroy, @manifestation -%>
           <%- if params[:mode] == 'add' -%>
             <%= radio_button_tag 'mode', 'show' -%> <%= t('page.show') -%>
             <%= radio_button_tag 'mode', 'add', :checked => true -%> <%= t('page.add') -%>
@@ -27,9 +27,9 @@
     <%= javascript_tag("$('#search_form_top').focus()") -%>
   <%- end -%>
 
-  <%- if @resources.total_entries > 0 -%>
+  <%- if @manifestations.total_entries > 0 -%>
     <p>
-      <%= t('page.number_of_search_results', :count => @count[:query_result], :numdocs => Resource.cached_numdocs, :seconds => sprintf("%.3f", @seconds)) -%>
+      <%= t('page.number_of_search_results', :count => @count[:query_result], :numdocs => Manifestation.cached_numdocs, :seconds => sprintf("%.3f", @seconds)) -%>
       <%- if @count[:query_result] > configatron.max_number_of_results -%>
         <br />
         <%= t('page.limit_exceeded', :count => configatron.max_number_of_results) -%>
@@ -56,7 +56,7 @@
     </p>
 
     <div class="autopagerize_page_element" id="list">
-      <%= render :partial => 'manifestations/list', :locals => {:manifestations => @resources} -%>
+      <%= render :partial => 'manifestations/list', :locals => {:manifestations => @manifestations} -%>
     </div>
 
     <div id="tag_cloud">
@@ -68,7 +68,7 @@
   <%- else -%>
     <!-- TODO: 検索結果が少ない場合にも表示させる -->
     <%- if @suggested_tag -%>
-      <p><%= t('page.did_you_mean') -%>: <%= link_to h(@suggested_tag.name), resources_path(:tag => @suggested_tag.name) -%></p>
+      <p><%= t('page.did_you_mean') -%>: <%= link_to h(@suggested_tag.name), manifestations_path(:tag => @suggested_tag.name) -%></p>
     <%- end -%>
     <%= render :partial => 'manifestations/not_found' -%>
   <%- end -%>
@@ -80,7 +80,7 @@
 
 <div id="submenu" class="ui-corner-all">
     <h3><%= link_to h("#{t('page.total')}: #{@count[:query_result]}"), url_for(params.merge(:action => 'index', :view => nil, :carrier_type => nil, :library => nil, :language => nil, :subject => nil))  -%></h3>
-    <%- if @resources.total_entries > 0 -%>
+    <%- if @manifestations.total_entries > 0 -%>
       <%= render 'manifestations/all_facet' -%>
     <%- end -%>
   <div>
