--- a/app/views/page/_footer.html.erb
+++ b/app/views/page/_footer.html.erb
@@ -12,7 +12,7 @@
     <a href="http://www.rubyonrails.org/">Ruby on Rails</a>,
     <%= database_adapter -%>
     and <a href="http://lucene.apache.org/solr/">Solr</a>
-    <%- if Resource.respond_to?(:enju_worldcat) -%>
+    <%- if Manifestation.respond_to?(:enju_worldcat) -%>
       <a href="http://www.worldcat.org/" target="_blank"><img border="0" src="http://www.worldcat.org/images/wc_badge_144x19.gif?ai=Tokyo_nabeta" width="144" height="19" alt="WorldCat lets people access the collections of libraries worldwide [WorldCat.org]" title="WorldCat lets people access the collections of libraries worldwide [WorldCat.org]" /></a>
     <%- end -%>
   </div>
