--- a/app/views/picture_files/show.html.erb
+++ b/app/views/picture_files/show.html.erb
@@ -50,7 +50,7 @@
     <li><%= link_to t('page.edit'), edit_picture_file_path(@picture_file) -%></li>
     <%- case when @picture_file.picture_attachable.is_a?(Shelf) -%>
       <li><%= link_to t('page.listing', :model => t('activerecord.models.picture_file')), shelf_picture_files_path(@picture_file.picture_attachable) -%></li>
-    <%- when @picture_file.picture_attachable.is_a?(Resource) -%>
+    <%- when @picture_file.picture_attachable.is_a?(Manifestation) -%>
       <li><%= link_to t('page.listing', :model => t('activerecord.models.picture_file')), manifestation_picture_files_path(@picture_file.picture_attachable) -%></li>
     <%- when @picture_file.picture_attachable.is_a?(Patron) -%>
       <li><%= link_to t('page.listing', :model => t('activerecord.models.picture_file')), patron_picture_files_path(@picture_file.picture_attachable) -%></li>
