--- a/app/views/reserves/index.html.erb
+++ b/app/views/reserves/index.html.erb
@@ -45,7 +45,7 @@
 <div id="submenu" class="ui-corner-all">
   <ul>
     <li>
-    <%= link_to t('page.new', :model => t('activerecord.models.reserve')), resources_path(:reservable => true) -%>
+    <%= link_to t('page.new', :model => t('activerecord.models.reserve')), manifestations_path(:reservable => true) -%>
     <br />
     (<%= t('page.search_resource', :model => t('page.resource')) -%>)
     </li>
