--- a/app/views/search_histories/show.html.erb
+++ b/app/views/search_histories/show.html.erb
@@ -13,7 +13,7 @@
 
 <p>
 <strong><%= t('activerecord.attributes.search_history.query') -%>:</strong>
-<%= link_to h(@search_history.query), resources_path(:query => @search_history.query) -%>
+<%= link_to h(@search_history.query), manifestations_path(:query => @search_history.query) -%>
 </p>
 
 <p>
