--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -13,7 +13,7 @@
     <p>
       <strong><%= t('activerecord.attributes.tag.taggings_count') -%>:</strong>
       <%= @tag.taggings.size -%>
-      (<%= link_to t('page.search'), resources_path(:tag => @tag.name) -%>)
+      (<%= link_to t('page.search'), manifestations_path(:tag => @tag.name) -%>)
     </p>
 
     <p>
@@ -28,7 +28,7 @@
   <ul>
     <li><%= link_to t('page.back'), :back -%></li>
     <li><%= link_to t('page.edit'), edit_tag_path(@tag.name) -%></li>
-    <li><%= link_to t('page.search_resource', :model => t('activerecord.models.resource')), resources_path(:tag => h(@tag.name)) -%></li>
+    <li><%= link_to t('page.search_resource', :model => t('activerecord.models.resource')), manifestations_path(:tag => h(@tag.name)) -%></li>
     <%- if user_signed_in? -%>
       <li><%= link_to t('page.search_resource', :model => t('activerecord.models.bookmark')), user_bookmarks_path(current_user, :tag => h(@tag.name)) -%></li>
     <%- end -%>
