--- a/app/views/manifestations/_pickup.html.erb
+++ b/app/views/manifestations/_pickup.html.erb
@@ -1,5 +1,5 @@
 <% if manifestation %>
-  <% cache(:controller => :resources, :action => :show, :id => manifestation.id, :page => 'pickup', :role => current_user_role_name, :locale => @locale) do %>
+  <% cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'pickup', :role => current_user_role_name, :locale => @locale) do %>
     <div id="pickup_book_jacket">
      <%= book_jacket(manifestation) -%>
    </div>
