--- a/app/views/manifestations/_show_detail_user.html.erb
+++ b/app/views/manifestations/_show_detail_user.html.erb
@@ -1,6 +1,6 @@
   <%= render 'page/tabview' -%>
   <div id="tabs">
-    <% cache(:controller => :resources, :action => :show, :id => manifestation.id, :page => 'detail', :role => current_user_role_name, :locale => @locale) do %>
+    <% cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'detail', :role => current_user_role_name, :locale => @locale) do %>
     <%= render :partial => 'manifestations/tab_menu', :locals => {:manifestation => manifestation} %>
     <div id="detail">
       <%- if manifestation.isbn -%>
