--- a/app/views/page/configuration.html.erb
+++ b/app/views/page/configuration.html.erb
@@ -26,7 +26,7 @@
   <h2 class="title"><%= t('page.resource') -%></h2>
   <div class="config_box">
   <ul>
-    <li><%= link_to t('activerecord.models.resource'), resources_path -%></li>
+    <li><%= link_to t('activerecord.models.resource'), manifestations_path -%></li>
     <li><%= link_to t('activerecord.models.bookmark'), bookmarks_path -%></li>
     <li><%= link_to t('activerecord.models.import_request'), import_requests_path -%></li>
     <li><%= link_to t('activerecord.models.series_statement'), series_statements_path -%></li>
