updated template files

--- a/app/views/layouts/manifestations.html.erb
+++ b/app/views/layouts/manifestations.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= resource_title(@resource, controller.action_name) %></title>
+  <title><%= resource_title(@manifestation, controller.action_name) %></title>
   <%= render :partial => 'page/include' %>
   <%- if controller.action_name == 'index' -%>
     <%= auto_discovery_link_tag(:rss, url_for(params.merge(:format => 'rss', :page => nil, :commit => nil)), :title => (t('patron.library_group_patron', :library_group_name => @library_group.display_name.localize) + " (RSS)")) %>
