fixed reserved_manifestations relationship

--- a/public/stylesheets/enju.css
+++ b/public/stylesheets/enju.css
@@ -327,6 +327,10 @@ input.resource_title{
   width: 30em;
 }
 
+input.resource_locale{
+  width: 10em;
+}
+
 input.resource_email{
   width: 20em;
   ime-mode: disabled;
