--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -1,4 +1,4 @@
-  <div id="content_detail" class="ui-corner-all">
+<div id="content_detail" class="ui-corner-all">
   <h1 class="title"><%= t('page.showing', :model => t('activerecord.models.resource')) -%></h1>
   <div id="content_list">
     <%= form_for :resources, :url => manifestations_path, :html => {:method => 'get'} do -%>
@@ -13,18 +13,20 @@
     <%- end -%>
     <%= javascript_tag("$('#search_form_top').focus()") -%>
 
-  <%= render :partial => 'manifestations/title', :locals => {:manifestation => @manifestation} -%>
+    <%= render :partial => 'manifestations/title', :locals => {:manifestation => @manifestation} -%>
+    <%- if @version -%>
+      <p>(<%= l(@manifestation.versions.find(@version).created_at) -%>)</p>
+    <%- end -%>
     <% if current_user.try(:has_role?, 'Librarian') %>
       <%= render :partial => 'manifestations/show_detail_librarian', :locals => {:manifestation => @manifestation} %>
     <% else %>
       <%= render :partial => 'manifestations/show_detail_user', :locals => {:manifestation => @manifestation} %>
     <% end %>
 
-<%- if params[:mode] == 'generate_cache' -%>
-  <%= render :partial => 'manifestations/show_index', :locals => {:manifestation => @manifestation} -%>
-  <%= render :partial => 'manifestations/pickup', :locals => {:manifestation => @manifestation} -%>
-<%- end -%>
-
+    <%- if params[:mode] == 'generate_cache' -%>
+      <%= render :partial => 'manifestations/show_index', :locals => {:manifestation => @manifestation} -%>
+      <%= render :partial => 'manifestations/pickup', :locals => {:manifestation => @manifestation} -%>
+    <%- end -%>
   </div>
 </div>
 
@@ -125,7 +127,7 @@
               <li><%= link_to t('manifestation.add_next_issue'), new_series_statement_manifestation_path(@manifestation.series_statement) if @manifestation.series_statement -%></li>
             <%- end -%>
           </ul>
-          <li><%= link_to t('resource.add_derivation'), manifestation_manifestations_path(@manifestation, :mode => 'add') -%></li>
+          <li><%= link_to t('manifestation.add_derivation'), manifestation_manifestations_path(@manifestation, :mode => 'add') -%></li>
           <li><%= link_to t('manifestation.edit_item'), manifestation_items_path(@manifestation) -%></li>
         </ul>
       <%- end -%>
