--- a/app/views/manifestations/_show_authors.html.erb
+++ b/app/views/manifestations/_show_authors.html.erb
@@ -3,14 +3,14 @@
         <%= link_to h(patron.full_name), patron -%>
       <%- end -%>
       <%- if manifestation.creators.size > 5 -%>
-        (<a href="#" onclick="$.ajax({data:'authenticity_token=' + encodeURIComponent('<%= form_authenticity_token %>'), success:function(request){$('#author_list_<%= manifestation.id %>').html(request);}, type:'get', url:'/resources/<%= manifestation.id %>?index_num=<%= manifestation.id %>&amp;mode=show_authors'}); return false;"><%= t('page.hide') %></a>)
+        (<a href="#" onclick="$.ajax({data:'authenticity_token=' + encodeURIComponent('<%= form_authenticity_token %>'), success:function(request){$('#author_list_<%= manifestation.id %>').html(request);}, type:'get', url:'/manifestations/<%= manifestation.id %>?index_num=<%= manifestation.id %>&amp;mode=show_authors'}); return false;"><%= t('page.hide') %></a>)
       <%- end -%>
   <%- else -%>
       <%- manifestation.creators[0..2].each do |patron| -%>
         <%= link_to h(patron.full_name), patron -%>
       <%- end -%>
       <%- if manifestation.creators.size > 5 -%>
-        (<a href="#" onclick="$.ajax({data:'authenticity_token=' + encodeURIComponent('<%= form_authenticity_token %>'), success:function(request){$('#author_list_<%= manifestation.id %>').html(request);}, type:'get', url:'/resources/<%= manifestation.id %>?index_num=<%= manifestation.id %>&amp;mode=show_all_authors'}); return false;"><%= t('page.show_all') %></a>)
+        (<a href="#" onclick="$.ajax({data:'authenticity_token=' + encodeURIComponent('<%= form_authenticity_token %>'), success:function(request){$('#author_list_<%= manifestation.id %>').html(request);}, type:'get', url:'/manifestations/<%= manifestation.id %>?index_num=<%= manifestation.id %>&amp;mode=show_all_authors'}); return false;"><%= t('page.show_all') %></a>)
       <%- end -%>
   <%- end -%>
 
