--- a/app/views/manifestations/_tag_edit.html.erb
+++ b/app/views/manifestations/_tag_edit.html.erb
@@ -5,7 +5,7 @@
       <div>
         <%= f.text_field :tag_list, :value => @bookmark.tag_list.join(' '), :class => 'editable_text_field' -%>
         <%= submit_tag t('page.update') -%>
-        (<a onclick="$.ajax({data:'authenticity_token=' + encodeURIComponent('<%= form_authenticity_token %>'), success:function(request){$('#tag_list').html(request);}, type:'get', url:'/resources/<%= manifestation.id %>?mode=tag_list'}); return false;" href="#"><%= t('page.cancel') %></a>)
+        (<a onclick="$.ajax({data:'authenticity_token=' + encodeURIComponent('<%= form_authenticity_token %>'), success:function(request){$('#tag_list').html(request);}, type:'get', url:'/manifestations/<%= manifestation.id %>?mode=tag_list'}); return false;" href="#"><%= t('page.cancel') %></a>)
         <br />
         <%= t('tag.use_space_as_delimiter') -%>
       </div>
@@ -19,7 +19,7 @@
         <%= f.hidden_field :title, :value => h(manifestation.original_title) -%>
         <%= f.hidden_field :url, :value => manifestation_url(manifestation) -%>
         <%= submit_tag t('page.create') -%>
-        (<a onclick="$.ajax({data:'authenticity_token=' + encodeURIComponent('<%= form_authenticity_token %>'), success:function(request){$('#tag_list').html(request);}, type:'get', url:'/resources/<%= manifestation.id %>?mode=tag_list'}); return false;" href="#"><%= t('page.cancel') %></a>)
+        (<a onclick="$.ajax({data:'authenticity_token=' + encodeURIComponent('<%= form_authenticity_token %>'), success:function(request){$('#tag_list').html(request);}, type:'get', url:'/manifestations/<%= manifestation.id %>?mode=tag_list'}); return false;" href="#"><%= t('page.cancel') %></a>)
         <br />
         <%= t('tag.use_space_as_delimiter') -%>
       </div>
