postal_code -> zip_code

--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -42,7 +42,7 @@
     <td>
       <%= link_to h(library.display_name.localize), library_path(library.name) -%>
       <br />
-      <%= library.postal_code -%>
+      <%= library.zip_code -%>
       <%= library.address -%>
     </td>
     <td>
