--- a/app/views/libraries/new.html.erb
+++ b/app/views/libraries/new.html.erb
@@ -26,8 +26,8 @@
   </p>
 
   <p>
-    <%= f.label t('activerecord.attributes.library.postal_code') -%><br />
-    <%= f.text_field :postal_code -%>
+    <%= f.label t('activerecord.attributes.library.zip_code') -%><br />
+    <%= f.text_field :zip_code -%>
   </p>
 
   <p>
