--- a/app/views/layouts/manifestations.html.erb
+++ b/app/views/layouts/manifestations.html.erb
@@ -8,7 +8,7 @@
     <%= auto_discovery_link_tag(:atom, url_for(params.merge(:format => 'atom', :page => nil, :commit => nil)), :title => (t('patron.library_group_patron', :library_group_name => @library_group.display_name.localize) + " (Atom)")) %>
   <%- end -%>
   <% if controller.action_name == 'show' %>
-    <script type="text/javascript" src="http://books.google.com/books/previewlib.js" />
+    <script type="text/javascript" src="http://books.google.com/books/previewlib.js"></script>
   <% end %>
 </head>
 <body>
