--- a/app/views/manifestations/_tag_list.html.erb
+++ b/app/views/manifestations/_tag_list.html.erb
@@ -3,7 +3,7 @@
     <%- manifestation.tags.each do |tag| -%>
       <%= link_to_tag(tag) -%>
       <%- if can? :destroy, tag -%>
-        <%= link_to image_tag('/icons/tag_blue_edit.png', :alt => t('page.edit')), tag_path(tag.name) -%>
+        <%= link_to image_tag('icons/tag_blue_edit.png', :alt => t('page.edit')), tag_path(tag.name) -%>
       <%- end -%>
     <%- end -%>
   <%- end -%>
