--- a/app/views/manifestations/index.html.erb
+++ b/app/views/manifestations/index.html.erb
@@ -22,7 +22,7 @@
         <%- end -%>
       <%- end -%>
       <br />
-      <%= link_to t('page.advanced_search'), '/page/advanced_search' -%>
+      <%= link_to t('page.advanced_search'), page_advanced_search_path -%>
     </p>
     <%= javascript_tag("$('#search_form_top').focus()") -%>
   <%- end -%>
