--- a/app/views/page/export.html.erb
+++ b/app/views/page/export.html.erb
@@ -13,7 +13,7 @@
   </li>
   <li>
     <%= t('activerecord.models.resource') -%>
-    (<%= link_to 'CSV', manifestations_path(:format => :csv) -%>)
+    (<%= link_to 'CSV', resources_path(:format => :csv) -%>)
   </li>
   <li>
     <%= t('activerecord.models.item') -%>
