--- a/app/views/picture_files/_index_manifestation.html.erb
+++ b/app/views/picture_files/_index_manifestation.html.erb
@@ -17,7 +17,7 @@
   <%- @picture_files.each do |picture_file| -%>
     <tr class="line<%= cycle("0", "1") -%>">
       <td>
-        <%- if can? :destroy, picture_file -%>
+        <%- if can? :update, picture_file -%>
           <%= move_position(picture_file) -%>
         <%- end -%>
       </td>
@@ -28,9 +28,11 @@
       <td><%= picture_file.picture_content_type -%></td>
       <td><%= link_to h(picture_file.picture_file_name), picture_file_path(picture_file, :format => :download, :size => 'original') -%></td>
       <td>
-        <%- if can? :destroy, picture_file -%>
-          <%= link_to t('page.show'), picture_file -%>
+        <%= link_to t('page.show'), picture_file -%>
+        <%- if can? :update, picture_file -%>
           <%= link_to t('page.edit'), edit_picture_file_path(picture_file) -%>
+        <% end %>
+        <%- if can? :destroy, picture_file -%>
           <%= link_to t('page.destroy'), picture_file, :confirm => t('page.are_you_sure'), :method => :delete -%>
         <%- end -%>
       </td>
