--- a/app/views/users/_edit_credential.html.erb
+++ b/app/views/users/_edit_credential.html.erb
@@ -74,7 +74,7 @@
     <p>
       <%= f.label t('activerecord.models.role') -%><br />
       <%- if current_user.has_role?('Administrator') and current_user != @user -%>
-        <%= f.select(:role_id, @roles.collect{|r| [r.display_name.localize, r.id]}, {}, {:disabled => 'disabled'}) -%>
+        <%= f.select(:role_id, @roles.collect{|r| [r.display_name.localize, r.id]}, {}) -%>
       <% else %>
         <%= f.select(:role_id, @roles.collect{|r| [r.display_name.localize, r.id]}, {}, {:disabled => 'disabled'}) -%>
       <% end %>
