--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -1,6 +1,6 @@
   <%= render 'page/tabview' -%>
   <div id="tabs">
-    <% cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :role => current_user_role_name, :locale => @locale, :page => 'detail') do %>
+    <% cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'detail', :role => current_user_role_name, :locale => @locale) do %>
     <%= render :partial => 'manifestations/tab_menu', :locals => {:manifestation => manifestation} %>
     <div id="detail">
       <%- if manifestation.isbn -%>
@@ -24,10 +24,10 @@
                 <%= t('activerecord.attributes.manifestation.volume_number_list') -%>: <%= manifestation.volume_number.join("/") -%>
               <%- end -%>
               <%- unless manifestation.issue_number_list.blank? -%>
-                <%= t('resource.issue_number') -%>: <%= manifestation.issue_number.join("/") -%>
+                <%= t('manifestation.issue_number') -%>: <%= manifestation.issue_number.join("/") -%>
               <%- end -%>
               <%- unless manifestation.serial_number_list.blank? -%>
-                <%= t('resource.serial_number') -%>: <%= manifestation.serial_number.join("/") -%>
+                <%= t('manifestation.serial_number') -%>: <%= manifestation.serial_number.join("/") -%>
               <%- end -%>
             </td>
           </tr>
