--- a/app/views/manifestations/_show_index.html.erb
+++ b/app/views/manifestations/_show_index.html.erb
@@ -7,8 +7,8 @@
     <%= manifestation.serial_number_list -%>
   <%- end -%>
   <%= link_to form_icon(manifestation.carrier_type), manifestation -%>
-  <%= image_tag('/icons/newspaper.png', :size => '16x16', :alt => t('manifestation.serial')) if manifestation.serial? -%>
-  <%= link_to image_tag('/icons/world_go.png', :size => '16x16', :alt => t('manifestation.web')), manifestation.access_address unless manifestation.access_address.blank? -%>
+  <%= image_tag('icons/newspaper.png', :size => '16x16', :alt => t('manifestation.serial')) if manifestation.serial? -%>
+  <%= link_to image_tag('icons/world_go.png', :size => '16x16', :alt => t('manifestation.web')), manifestation.access_address unless manifestation.access_address.blank? -%>
   <br />
   <div id="author_list_<%= manifestation.id -%>">
     <%= render :partial => 'manifestations/show_authors', :locals => {:manifestation => manifestation} -%>
