--- a/app/views/manifestations/_title.html.erb
+++ b/app/views/manifestations/_title.html.erb
@@ -20,7 +20,7 @@
     <%- unless manifestation.access_address.blank? -%>
       <br />
       <%= link_to h(manifestation.access_address), h(manifestation.access_address) -%>
-      <%= link_to image_tag('/icons/world_go.png', :size => '16x16', :alt => ('Web')), h(manifestation.access_address) -%>
+      <%= link_to image_tag('icons/world_go.png', :size => '16x16', :alt => ('Web')), h(manifestation.access_address) -%>
     <%- end -%>
   </p>
 <% end %>
