--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -8,7 +8,7 @@
         <%= t('page.search_term') -%>:
         <%= search_field_tag 'query', session[:query], {:id => 'search_form_top', :class => 'search_form_short'} -%>
         <%= submit_tag t('page.search') -%>
-        <%= link_to t('page.advanced_search'), '/page/advanced_search' -%>
+        <%= link_to t('page.advanced_search'), page_advanced_search_path -%>
       </div>
     <%- end -%>
     <%= javascript_tag("$('#search_form_top').focus()") -%>
@@ -128,6 +128,7 @@
             <%- end -%>
           </ul>
           <li><%= link_to t('manifestation.add_derivation'), manifestation_manifestations_path(@manifestation, :mode => 'add') -%></li>
+          <li><%= link_to t('page.listing', :model => t('activerecord.models.subject')), work_subjects_path(@manifestation) -%></h1>
           <li><%= link_to t('manifestation.edit_item'), manifestation_items_path(@manifestation) -%></li>
         </ul>
       <%- end -%>
