--- a/app/views/page/_menu.html.erb
+++ b/app/views/page/_menu.html.erb
@@ -10,11 +10,35 @@
   <div id="circulation_menu" class="hidden">
     <%- if user_signed_in? -%>
       <ul>
+        <%- if current_user.has_role?('Librarian') -%>
+          <li><%= link_to t('page.checkout'), new_basket_path -%></li>
+          <li>
+            <%- if @checkins and @basket -%>
+              <%= link_to t('page.checkin'), user_basket_checkins_path(@basket.user, @basket) -%>
+            <%- else -%>
+              <%= link_to t('page.checkin'), checkins_path -%>
+            <%- end -%>
+          </li>
+        <% end %>
         <li>
+          <%- if current_user.has_role?('Librarian') -%>
+            <%= link_to t('page.listing', :model => t('activerecord.models.reserve')), reserves_path -%>
+          <%- else -%>
+            <%= link_to t('page.listing', :model => t('activerecord.models.reserve')), user_reserves_path(current_user) -%>
+          <%- end -%>
         </li>
+        <%- if current_user.has_role?('Librarian') -%>
+          <li><%= link_to t('activerecord.models.inter_library_loan'), inter_library_loans_path -%></li>
+          <!--
+          <li><%= link_to 'NACSIS ILL', 'page/under_construction' -%></li>
+          -->
+        <%- end -%>
+        <li><%= link_to t('page.checkout_history'), user_checkouts_path(current_user) -%></li>
       </ul>
     <%- else -%>
       <ul>
+        <li><%= link_to t('page.checkout_history'), checkouts_path -%></li>
+        <li><%= link_to t('page.listing', :model => t('activerecord.models.reserve')), reserves_path -%></li>
       </ul>
     <%- end -%>
   </div>
@@ -22,11 +46,17 @@
   <%- if user_signed_in? -%>
     <div id="acquisition_menu" class="hidden">
       <ul>
+        <%- if current_user.has_role?('Librarian') -%>
+          <li><%= link_to t('page.add_manually'), new_import_request_path -%></li>
+          <li><%= link_to t('page.import_from_file'), page_import_path -%></li>
+          <li><%= link_to t('page.upload_file'), new_manifestation_path(:mode => 'attachment') -%></li>
+        <%- end -%>
       </ul>
     </div>
   <%- else -%>
     <div id="acquisition_menu" class="hidden">
       <ul>
+        <li><%= link_to t('page.listing', :model => t('activerecord.models.bookmark')), bookmarks_path -%></li>
       </ul>
     </div>
   <%- end -%>
@@ -34,11 +64,15 @@
     <%- if user_signed_in? -%>
       <div id="request_menu" class="hidden">
         <ul>
+          <li><%= link_to t('activerecord.models.purchase_request'), user_purchase_requests_path(current_user) -%></li>
+          <li><%= link_to t('activerecord.models.question'), user_questions_path(current_user) -%></li>
         </ul>
       </div>
     <%- else -%>
       <div id="request_menu" class="hidden">
         <ul>
+          <li><%= link_to t('activerecord.models.purchase_request'), purchase_requests_path -%></li>
+          <li><%= link_to t('activerecord.models.question'), questions_path -%></li>
         </ul>
       </div>
   <%- end -%>
@@ -47,7 +81,12 @@
     <%- if @library_group.real_libraries.first -%>
       <ul>
         <li><%= link_to t('page.calendar'), '/calendar' -%></li>
+        <li><%= link_to t('event.all'), events_path -%></li>
         <%- @library_group.real_libraries.each do |library| -%>
+          <li><%= link_to h(library.display_name.localize), library_events_path(library.name) -%></li>
+        <%- end -%>
+        <%- if can? :create, Event -%>
+          <li><%= link_to t('page.import'), new_event_import_file_path -%></li>
         <%- end -%>
       </ul>
     <%- end -%>
@@ -63,8 +102,20 @@
     <%- if user_signed_in? -%>
       <%- if current_user.has_role?('Librarian') -%>
         <ul>
-          <li><%= link_to t('page.import'), '/page/import' -%></li>
-          <li><%= link_to t('page.configuration'), '/page/configuration' -%></li>
+          <li><%= link_to t('page.new', :model => t('activerecord.models.user')), new_user_path -%></li>
+          <li><%= link_to t('page.patron_management'), patrons_path -%></li>
+          <li><%= link_to t('page.import'), page_import_path -%></li>
+          <!--
+          <li><%= link_to t('page.export'), 'page/export' -%></li>
+          -->
+          <li><%= link_to t('activerecord.models.order_list'), order_lists_path -%></li>
+          <li><%= link_to t('page.statistics'), page_statistics_path -%></li>
+          <li><%= link_to t('activerecord.models.search_history'), search_histories_path -%></li>
+          <!--
+          <li><%= link_to t('page.recommendation'), 'page/under_construction' -%></li>
+          <li><%= link_to 'Send questions and answers to CRD', 'page/under_construction' -%></li>
+          -->
+          <li><%= link_to t('page.configuration'), page_configuration_path -%></li>
         </ul>
       <%- else -%>
         <ul>
