--- a/app/views/page/about.en.html.erb
+++ b/app/views/page/about.en.html.erb
@@ -3,8 +3,8 @@
 <div id="content_list">
 
 <ul>
-  <li>This integrated library system software "Next-L Enju Flower" is developed by <a href="http://mwr.mediacom.keio.ac.jp/~tanabe/">Kosuke Tanabe</a> and <a href="http://www.next-l.jp/">Project Next-L</a>.</li>
-  <li>Next-L Enju Flower is released under MIT license. For more information, visit <a href="http://github.com/nabeta/enju_flower/wiki">our project website</a>.</li>
+  <li>This integrated library system software "Next-L Enju Leaf" is developed by <a href="http://mwr.mediacom.keio.ac.jp/~tanabe/">Kosuke Tanabe</a> and <a href="http://www.next-l.jp/">Project Next-L</a>.</li>
+  <li>Next-L Enju Leaf is released under MIT license. For more information, visit <a href="http://github.com/nabeta/enju_leaf/wiki">our project website</a>.</li>
 </ul>
 
 <h2>Contact information</h2>
@@ -34,7 +34,7 @@
     <li><a href="http://www.thumbalizr.com/">thumbalizr</a></li>
   </ul>
   </li>
-  <li>The icons on this system are produced by <a href="http://www.famfamfam.com/lab/icons/">famfamfam.com</a>.</li>
+  <li>The icons on this system are produced by <a href="http://www.famfamfam.com/labicons/">famfamfam.com</a>.</li>
 </ul>
 
 </div>
@@ -43,7 +43,7 @@
 <div id="submenu" class="ui-corner-all">
   <ul>
     <li><a href="http://www.next-l.jp/">Project Next-L</a></li>
-    <li><a href="http://github.com/nabeta/enju_flower/wiki">this project on GitHub</a></li>
+    <li><a href="http://github.com/nabeta/enju_leaf/wiki">this project on GitHub</a></li>
     <li><a href="http://next-l.slis.keio.ac.jp/wiki/wiki.cgi?page=%A5%E1%A1%BC%A5%EA%A5%F3%A5%B0%A5%EA%A5%B9%A5%C8">Mailing list</a> (in Japanese)</li>
   </ul>
 </div>
