--- a/app/views/page/about.ja.html.erb
+++ b/app/views/page/about.ja.html.erb
@@ -3,8 +3,8 @@
 <div id="content_list">
 
 <ul>
-  <li>この図書館システム"Next-L Enju Flower"は、<a href="http://mwr.mediacom.keio.ac.jp/~tanabe/">田辺浩介</a>と<a href="http://www.next-l.jp/">Project Next-L</a>によって開発されています。</li>
-  <li>Next-L Enju FlowerはMITライセンスのもとに公開されています。詳しくは<a href="http://github.com/nabeta/enju_flower/wiki">プロジェクトのホームページ</a>をごらんください。</li>
+  <li>この図書館システム"Next-L Enju Leaf"は、<a href="http://mwr.mediacom.keio.ac.jp/~tanabe/">田辺浩介</a>と<a href="http://www.next-l.jp/">Project Next-L</a>によって開発されています。</li>
+  <li>Next-L Enju LeafはMITライセンスのもとに公開されています。詳しくは<a href="http://github.com/nabeta/enju_leaf/wiki">プロジェクトのホームページ</a>をごらんください。</li>
 </ul>
 
 <h2>連絡先</h2>
@@ -34,7 +34,7 @@
     <li><a href="http://www.thumbalizr.com/">thumbalizr</a></li>
   </ul>
   </li>
-  <li>このシステムで利用しているアイコンは、<a href="http://www.famfamfam.com/lab/icons/">famfamfam.com</a>によって製作されています。</li>
+  <li>このシステムで利用しているアイコンは、<a href="http://www.famfamfam.com/labicons/">famfamfam.com</a>によって製作されています。</li>
 </ul>
 
 </div>
@@ -43,7 +43,7 @@
 <div id="submenu" class="ui-corner-all">
   <ul>
     <li><a href="http://www.next-l.jp/">Project Next-L</a></li>
-    <li><a href="http://github.com/nabeta/enju_flower/wiki">GitHubでのプロジェクトのページ</a></li>
+    <li><a href="http://github.com/nabeta/enju_leaf/wiki">GitHubでのプロジェクトのページ</a></li>
     <li><a href="http://next-l.slis.keio.ac.jp/wiki/wiki.cgi?page=%A5%E1%A1%BC%A5%EA%A5%F3%A5%B0%A5%EA%A5%B9%A5%C8">メーリングリスト</a></li>
   </ul>
 </div>
