--- a/app/views/page/statistics.html.erb
+++ b/app/views/page/statistics.html.erb
@@ -18,8 +18,8 @@
       <td></td>
     </tr>
     <tr>
-      <td><%= link_to t('activerecord.models.resource'), manifestations_path -%></td>
-      <td><%= Manifestaton.count -%></td>
+      <td><%= link_to t('activerecord.models.resource'), resources_path -%></td>
+      <td><%= Manifestation.count -%></td>
       <td></td>
     </tr>
     <tr>
