--- a/app/views/purchase_requests/_index.html.erb
+++ b/app/views/purchase_requests/_index.html.erb
@@ -32,9 +32,9 @@
         <%= link_to h(purchase_request.order_list.title), order_list_purchase_requests_path(purchase_request.order_list) if purchase_request.order_list -%>
       </td>
       <td>
-        <%= link_to image_tag('/icons/page_white_edit.png', :size => '16x16', :alt => t('page.edit')), edit_user_purchase_request_path(purchase_request.user, purchase_request) -%>
+        <%= link_to image_tag('icons/page_white_edit.png', :size => '16x16', :alt => t('page.edit')), edit_user_purchase_request_path(purchase_request.user, purchase_request) -%>
         <%- if can? :destroy, purchase_request %>
-          <%= link_to image_tag('/icons/delete.png', :size => '16x16', :alt => t('page.destroy')), purchase_request, :confirm => t('page.are_you_sure'), :method => :delete -%>
+          <%= link_to image_tag('icons/delete.png', :size => '16x16', :alt => t('page.destroy')), purchase_request, :confirm => t('page.are_you_sure'), :method => :delete -%>
         <%- end -%>
       </td>
     </tr>
