--- a/app/views/shelves/_index_library.html.erb
+++ b/app/views/shelves/_index_library.html.erb
@@ -7,21 +7,26 @@
     <th id="position"></th>
     <th><%= t('activerecord.attributes.shelf.name') -%></th>
     <th><%= t('activerecord.models.library') -%></th>
+    <th></th>
   </tr>
   
 <%- @shelves.each_with_index do |shelf, i| -%>
   <tr class="line<%= cycle("0", "1") -%>">
     <td>
-      <%- if can? :destroy, shelf -%>
+      <%- if can? :update, shelf -%>
         <%= move_position(shelf) -%>
       <%- end -%>
     </td>
     <td><%= link_to h(shelf.display_name.localize), shelf -%></td>
     <td><%= link_to h(shelf.library.display_name.localize), library_path(shelf.library.name) -%></td>
-    <%- if can? :destroy, shelf -%>
-      <td><%= link_to t('page.edit'), edit_library_shelf_path(shelf.library.name, shelf) -%></td>
-      <td><%= link_to t('page.destroy'), shelf_path(shelf), :confirm => t('page.are_you_sure'), :method => :delete -%></td>
-    <%- end -%>
+    <td>
+      <%- if can? :update, shelf -%>
+        <%= link_to t('page.edit'), edit_library_shelf_path(shelf.library.name, shelf) -%>
+      <% end %>
+      <%- if can? :destroy, shelf -%>
+        <%= link_to t('page.destroy'), shelf_path(shelf), :confirm => t('page.are_you_sure'), :method => :delete -%></td>
+      <%- end -%>
+    </td>
   </tr>
 <%- end -%>
 </table>
